--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,12 +8,14 @@
 	<h2>会員登録</h2>
 	<p th:if="${errorMessage}" th:text="${errorMessage}" style="color:red;"></p>
 	
+	<!--th:object="${user}"で、Controllerから渡されたUserオブジェクトを使えるようになる-->
 	<form th:action="@`/register}" th:object="${user}" method="post"> <div> 
 			<label>ユーザー名：</label>
 			<input type="text" th:field="*{name}" /> <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red;"></p>
 		</div>
 		<div>
 			<label>パスワード：</label>
+			<!--th:field="*{password}"で、入力した値が自動的にuser.setName()される-->
 			<input type="password" th:field="*{password}" />
 			<p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red;"></p>
 		</div>
