--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html>
+<!--名前宣言（thと出てきたらthymeleafのことです、という定義）-->
+<html xmlns:th="http://www.thymeleaf.org"> 
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>ログイン</title>
 </head>
 <body>
-
+	<h2>ログイン</h2>
+	<!--URLにerrorが含まれていれば表示-->
+	<div th:if="${param.error}" style="color: red;">
+		ユーザー名またはパスワードが正しくありません。
+	</div>
+	<div th:if="${param.logout}" style="color: blue;">
+		ログアウトしました。
+	</div>
+	<!--@はURLを描くときに使う-->
+	<form th:action="@{/login}" method="post">
+		<div>
+			<label>ユーザー名：</label>
+			<input type="text" name="username" required />
+		</div>
+		<div>
+			<label>パスワード：</label>
+			<input type="password" name="password" required />
+		</div>
+		<button type="submit">ログイン</button>
+	</form>
+	
+	<hr>
+	<p>アカウントをお持ちでない方は<a th:href="@{/register}">こちらから登録</a></p>
 </body>
 </html>
